sahifalar qayta ko'rib chiqildi

--- a/page_jasurbek/page.html
+++ b/page_jasurbek/page.html
@@ -33,11 +33,11 @@
     <!-- header start -->
     <header class="header">
         <div class="header_list container">
-            <a href="#"><img src="images/logo_boldo.svg" alt=""></a>
+            <a href="../index.html"><img src="images/logo_boldo.svg" alt=""></a>
             <nav class="header_nav">
                 <ul class="header_nav_list">
                     <li class="header_item">
-                        <a href="#">Product</a>
+                        <a href="../blog.html">Product</a>
                     </li>
                     <li class="header_item">
                         <a href="#">Services</a>
